[gd_scene load_steps=19 format=2]

[ext_resource path="res://script/UI/Title/PathFollow2D.gd" type="Script" id=1]
[ext_resource path="res://script/UI/Title/SnakeNode.gd" type="Script" id=2]
[ext_resource path="res://script/UI/Title/Snake.gd" type="Script" id=3]
[ext_resource path="res://script/UI/Title/TitleScene.gd" type="Script" id=4]
[ext_resource path="res://script/UI/Title/AppleArea.gd" type="Script" id=5]
[ext_resource path="res://src/img/snake/snake-head/head_left.png" type="Texture" id=6]
[ext_resource path="res://src/img/collection/apple.png" type="Texture" id=7]
[ext_resource path="res://src/img/snake/snake-body/body_x.png" type="Texture" id=8]
[ext_resource path="res://src/img/UI/Title/GrassBackground.png" type="Texture" id=9]
[ext_resource path="res://src/img/UI/Title/SYLTHERIN.png" type="Texture" id=10]
[ext_resource path="res://src/theme/UI_theme.tres" type="Theme" id=11]
[ext_resource path="res://src/img/UI/SelectTitle/backicon.png" type="Texture" id=12]
[ext_resource path="res://src/theme/CompleteTitle_theme.tres" type="Theme" id=13]
[ext_resource path="res://src/theme/DataTheme.tres" type="Theme" id=14]

[sub_resource type="Animation" id=1]
resource_name = "waggle"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ -3.0, 3.0, -3.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( -2, -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 0.8, 0.8 ), Vector2( 1.1, 1.1 ), Vector2( 0.8, 0.8 ), Vector2( 1.1, 1.1 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
height = 220.0

[sub_resource type="Curve2D" id=2]
resource_name = "EatApple"
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, 432, 0, 0, 0, 0, 832, 432, 0, 0, 0, 0, 768, 432, 0, 0, 0, 0, 768, 432, 0, 0, 0, 0, 768, 432, 0, 0, 0, 0, 768, 432, 0, 0, 0, 0, 768, 432 )
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 104.0
height = 592.0

[node name="TitleScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="UI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
mouse_filter = 2

[node name="GrassBackground" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 9 )
expand = true

[node name="TextureRect" type="TextureRect" parent="UI"]
margin_left = 104.0
margin_top = 120.0
margin_right = 920.0
margin_bottom = 264.0
rect_rotation = 2.08156
rect_scale = Vector2( 0.919722, 0.919722 )
rect_pivot_offset = Vector2( 408, 72 )
mouse_filter = 2
texture = ExtResource( 10 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/TextureRect"]
autoplay = "waggle"
anims/waggle = SubResource( 1 )

[node name="MainMenu" type="VBoxContainer" parent="UI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_right = 192.0
margin_bottom = 172.0
theme = ExtResource( 11 )

[node name="START" type="Button" parent="UI/MainMenu"]
margin_right = 128.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 32, 16 )
size_flags_horizontal = 7
size_flags_vertical = 7
action_mode = 0
text = "START"

[node name="DATA" type="Button" parent="UI/MainMenu"]
margin_top = 70.0
margin_right = 128.0
margin_bottom = 101.0
text = "DATA"

[node name="QUIT" type="Button" parent="UI/MainMenu"]
margin_top = 133.0
margin_right = 128.0
margin_bottom = 172.0
size_flags_horizontal = 7
size_flags_vertical = 7
text = "QUIT"

[node name="SetMenu" type="VBoxContainer" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="TitlePartten" type="Node2D" parent="UI"]

[node name="AppleNode" type="Node2D" parent="UI/TitlePartten"]

[node name="AppleArea" type="Area2D" parent="UI/TitlePartten/AppleNode"]
script = ExtResource( 5 )

[node name="appleSprite" type="Sprite" parent="UI/TitlePartten/AppleNode/AppleArea"]
light_mask = 2
position = Vector2( 368, 432 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/TitlePartten/AppleNode/AppleArea"]
position = Vector2( 304, 432 )
shape = SubResource( 4 )

[node name="SnakeNode" type="Node2D" parent="UI/TitlePartten"]
script = ExtResource( 2 )

[node name="Path2D" type="Path2D" parent="UI/TitlePartten/SnakeNode"]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="UI/TitlePartten/SnakeNode/Path2D"]
position = Vector2( 1024, 432 )
rotation = 3.14159
script = ExtResource( 1 )

[node name="Snake" type="Area2D" parent="UI/TitlePartten/SnakeNode/Path2D/PathFollow2D"]
position = Vector2( 1024, 432 )
rotation = 3.14159
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/TitlePartten/SnakeNode/Path2D/PathFollow2D/Snake"]
position = Vector2( 912, 432 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Head" type="Sprite" parent="UI/TitlePartten/SnakeNode/Path2D/PathFollow2D/Snake"]
position = Vector2( 639.999, 432.002 )
scale = Vector2( 8, 8 )
texture = ExtResource( 6 )

[node name="Body1" type="Sprite" parent="UI/TitlePartten/SnakeNode/Path2D/PathFollow2D/Snake/Head"]
position = Vector2( 32, 3.8147e-06 )
rotation = -3.14159
texture = ExtResource( 8 )

[node name="Body2" type="Sprite" parent="UI/TitlePartten/SnakeNode/Path2D/PathFollow2D/Snake/Head"]
position = Vector2( 64, 3.8147e-06 )
rotation = -3.14159
texture = ExtResource( 8 )

[node name="DataUI" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 640.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="DataUI"]
margin_right = 1024.0
margin_bottom = 640.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.705882 )

[node name="VBoxContainer" type="VBoxContainer" parent="DataUI"]
margin_right = 1024.0
margin_bottom = 640.0
mouse_filter = 2

[node name="Title" type="Label" parent="DataUI/VBoxContainer"]
margin_left = 397.0
margin_top = 72.0
margin_right = 627.0
margin_bottom = 137.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 13 )
text = "DATA"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="DataUI/VBoxContainer"]
margin_left = 337.0
margin_top = 226.0
margin_right = 687.0
margin_bottom = 412.0
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 2

[node name="vice_title" type="Label" parent="DataUI/VBoxContainer/GridContainer"]
margin_right = 333.0
margin_bottom = 34.0
theme = ExtResource( 14 )
text = "Level 1 Best Score: "

[node name="score" type="Label" parent="DataUI/VBoxContainer/GridContainer"]
margin_left = 337.0
margin_right = 350.0
margin_bottom = 34.0
theme = ExtResource( 14 )
text = "0"

[node name="vice_title2" type="Label" parent="DataUI/VBoxContainer/GridContainer"]
margin_top = 38.0
margin_right = 333.0
margin_bottom = 72.0
theme = ExtResource( 14 )
text = "Level 2 Best Score: "

[node name="score2" type="Label" parent="DataUI/VBoxContainer/GridContainer"]
margin_left = 337.0
margin_top = 38.0
margin_right = 350.0
margin_bottom = 72.0
theme = ExtResource( 14 )
text = "0"

[node name="vice_title3" type="Label" parent="DataUI/VBoxContainer/GridContainer"]
margin_top = 76.0
margin_right = 333.0
margin_bottom = 110.0
theme = ExtResource( 14 )
text = "Level 3 Best Score: "

[node name="score3" type="Label" parent="DataUI/VBoxContainer/GridContainer"]
margin_left = 337.0
margin_top = 76.0
margin_right = 350.0
margin_bottom = 110.0
theme = ExtResource( 14 )
text = "0"

[node name="vice_title4" type="Label" parent="DataUI/VBoxContainer/GridContainer"]
margin_top = 114.0
margin_right = 333.0
margin_bottom = 148.0
theme = ExtResource( 14 )
text = "Level 4 Best Score: "

[node name="score4" type="Label" parent="DataUI/VBoxContainer/GridContainer"]
margin_left = 337.0
margin_top = 114.0
margin_right = 350.0
margin_bottom = 148.0
theme = ExtResource( 14 )
text = "0"

[node name="vice_title5" type="Label" parent="DataUI/VBoxContainer/GridContainer"]
margin_top = 152.0
margin_right = 333.0
margin_bottom = 186.0
theme = ExtResource( 14 )
text = "Level 5 Best Score: "

[node name="score5" type="Label" parent="DataUI/VBoxContainer/GridContainer"]
margin_left = 337.0
margin_top = 152.0
margin_right = 350.0
margin_bottom = 186.0
theme = ExtResource( 14 )
text = "0"

[node name="Back" type="TextureButton" parent="DataUI/VBoxContainer"]
margin_left = 480.0
margin_top = 502.0
margin_right = 544.0
margin_bottom = 566.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 12 )

[connection signal="pressed" from="UI/MainMenu/START" to="." method="_on_START_pressed"]
[connection signal="pressed" from="UI/MainMenu/DATA" to="." method="_on_DATA_pressed"]
[connection signal="pressed" from="UI/MainMenu/QUIT" to="." method="_on_QUIT_pressed"]
[connection signal="area_entered" from="UI/TitlePartten/AppleNode/AppleArea" to="UI/TitlePartten/AppleNode/AppleArea" method="_on_AppleArea_area_entered"]
[connection signal="Run" from="UI/TitlePartten/SnakeNode" to="UI/TitlePartten/SnakeNode/Path2D/PathFollow2D" method="_on_SnakeNode_Run"]
[connection signal="mouse_entered" from="UI/TitlePartten/SnakeNode/Path2D/PathFollow2D/Snake" to="UI/TitlePartten/SnakeNode" method="_on_Snake_mouse_entered"]
[connection signal="mouse_exited" from="UI/TitlePartten/SnakeNode/Path2D/PathFollow2D/Snake" to="UI/TitlePartten/SnakeNode/Path2D/PathFollow2D" method="_on_Snake_mouse_exited"]
[connection signal="pressed" from="DataUI/VBoxContainer/Back" to="." method="_on_Back_pressed"]
